# MARKDOWN_TO_DOCX

./: .gitignore  OFFLINE_DEPLOY.md  README.md  WINDOWS_PACKAGING.md  build.py  docforge_cli.py  pyproject.toml  run_docforge.ps1  tool-versions.md
config/: mermaid.json  puppeteer.json  templates.yaml
docs/: Project_Plan.md
examples/: sample_compliance.md  sample_tech.md  stress_tech_high_complexity.md
filters/: pagination.lua  toc.lua
packaging/: pyinstaller.spec
scripts/: install_offline.sh  package_windows.ps1  prepare_bundle_tools.ps1  prepare_offline_bundle.sh  render_mermaid.sh  test_packaged.ps1
src/docforge/: __init__.py
src/docforge/adapters/: __init__.py  tool_runner.py
src/docforge/cli/: __init__.py  main.py
src/docforge/core/: __init__.py  models.py  service.py
templates/: audit_template.docx  compliance_template.docx  gov_template.docx  tech_template.docx  tech_template_v1.docx
test/: smoke.sh  test_core_api.py  test_mermaid_browser_config.py
