[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docforge"
version = "0.1.0"
description = "Markdown to DOCX multi-template build engine"
requires-python = ">=3.10"
dependencies = [
  "PyYAML==6.0.3",
]

[project.scripts]
docforge = "docforge.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
